# app/controllers/commandes_controller.ts
@@ -5,6 +5,7 @@ import Product from '#models/product'
 import { adresseValidator } from '#validators/adress'
 import type { HttpContext } from '@adonisjs/core/http'
 import { StatusCommande } from '../Enum/status_commande.js'
+import { sendMessageToBuyers } from '#services/sendnotificationtobuyers'
 
 export default class CommandesController {
   async createCommande({ request, response, auth, bouncer }: HttpContext) {
@@ -29,6 +30,8 @@ export default class CommandesController {
       })
 
       let totalPrice = 0
+      let productInCommande = []
+      let messageTobuyers = []
 
       for (const item of produits) {
         const product = await Product.find(item.id)
@@ -39,6 +42,7 @@ export default class CommandesController {
         const quantity = item.quantity ?? 1
         const price = product.price
         const totalUnitaire = price * quantity
+        productInCommande.push(product)
 
         await CommandeProduct.create({
           commandeId: commande.id,
@@ -50,6 +54,8 @@ export default class CommandesController {
 
         totalPrice += totalUnitaire
       }
+
+      messageTobuyers = await sendMessageToBuyers(productInCommande, commande.id)
 
       commande.totalPrice = totalPrice
       await commande.save()
@@ -74,6 +80,7 @@ export default class CommandesController {
         commande: commande,
         total: commande.totalPrice,
         adresse: adresse,
+        notification: messageTobuyers,
       })
     } catch (error) {
       console.error(error)
